fixing a css issue with overlays not showing

--- a/infinitas/shop/webroot/css/shop.css
+++ b/infinitas/shop/webroot/css/shop.css
@@ -28,7 +28,7 @@
 	left:47px;
 	opacity:0.8;
 	position:relative;
-	top:-75px;
+	bottom:30px;
 	visibility:visible;
 }
 .product_item .product_image a span.isSpecial img,
